--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: BY Blog
 SEOTitle: 牟振东的博客 | BY AST
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: 1052808380@qq.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 牟振东的博客, MZD, 牟振东, iOS, Apple, iPhone"
 url: "http://mouzd.github.io"          # your host, for absolute URL
